kubernetes/apps/games/minecraft-rcon-web/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minecraft-rcon
  namespace: network-system
  annotations:
    external-dns.alpha.kubernetes.io/external: "false"
spec:
  hosts:
    - "rcon.${SECRET_DOMAIN:=internal}"
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            port:
              number: 80
            host: minecraft-rcon-web.game-servers.svc.cluster.local
